Implement UserVirtualCardHandlers, fix UserVirtualCardHandlers tests
