# client/api/openapi.yaml
@@ -806,11 +806,11 @@ paths:
           type: string
         style: simple
       responses:
-        "200":
+        "201":
           content:
             application/json:
               example:
-                status: OK
+                status: CREATED
               schema:
                 $ref: '#/components/schemas/DefaultResponse'
           description: Successful operation
@@ -835,7 +835,7 @@ paths:
       summary: Add a new virtual card
       tags:
       - virtualCards
-  /user/cards/virtual/{businessId}/items/{itemDefinitionId}:
+  /user/cards/virtual/{businessId}/itemsDefinitions/{itemDefinitionId}:
     post:
       description: This endpoint is used to buy an item for points from the virtual
         card.
@@ -872,6 +872,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/DefaultResponse'
           description: No such item or item does not belong to this business
+        "401":
+          content:
+            application/json:
+              example:
+                status: NOT_FOUND
+              schema:
+                $ref: '#/components/schemas/DefaultResponse'
+          description: "Item withdrawn, not available etc"
       security:
       - sessionToken: []
       summary: Buy an item
@@ -916,6 +924,14 @@ paths:
               schema:
                 $ref: '#/components/schemas/DefaultResponse'
           description: No such item
+        "401":
+          content:
+            application/json:
+              example:
+                status: INVALID_REQUEST
+              schema:
+                $ref: '#/components/schemas/DefaultResponse'
+          description: Item cannot be returned
       security:
       - sessionToken: []
       summary: Delete an item
@@ -943,7 +959,7 @@ paths:
               $ref: '#/components/schemas/PostUserVirtualCardTransactionRequest'
         required: true
       responses:
-        "200":
+        "201":
           content:
             application/json:
               schema:
@@ -1061,6 +1077,39 @@ paths:
       security:
       - sessionToken: []
       summary: Search businesses
+      tags:
+      - user
+  /user/businesses/{businessId}:
+    get:
+      description: This endpoint is used to get info about a business
+      operationId: getBusiness
+      parameters:
+      - description: Public id of the business
+        explode: false
+        in: path
+        name: businessId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetUserBusinessesResponse'
+          description: Successful operation
+        "400":
+          content:
+            application/json:
+              example:
+                status: INVALID_REQUEST
+              schema:
+                $ref: '#/components/schemas/DefaultResponse'
+          description: Invalid request
+      security:
+      - sessionToken: []
+      summary: Get business info
       tags:
       - user
   /file/{fileId}:
@@ -1459,6 +1508,7 @@ components:
       - PROCESSING
       - FINISHED
       - EXPIRED
+      - FAILED
       type: string
     GetUserCardsResponse:
       example:
@@ -1633,7 +1683,7 @@ components:
           itemId: bWlhOGFoYnVKYWl0Cg
           action: REDEEMED
       properties:
-        itemId:
+        publicId:
           type: string
         state:
           $ref: '#/components/schemas/TransactionStateEnum'
@@ -1739,6 +1789,8 @@ components:
           type: string
         bannerImageId:
           type: string
+        description:
+          type: string
         iconImageId:
           type: string
         menuImageIds:
@@ -1797,6 +1849,7 @@ components:
       type: object
     ItemActionTypeEnum:
       enum:
+      - NO_ACTION
       - REDEEMED
       - RECALLED
       - CANCELLED
